--- a/project/혜진 수정중/HansungApp_1 (2)/res/layout/tab2.xml
+++ b/project/혜진 수정중/HansungApp_1 (2)/res/layout/tab2.xml
@@ -48,6 +48,7 @@
 
         <GridView
             android:id="@+id/grid1"
+            android:background="@color/green"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
